# src/main/java/com/jesusfc/springboot3java17/controller/rest/UserRestController.java
@@ -1,81 +1,64 @@
 package com.jesusfc.springboot3java17.controller.rest;
 
-import com.jesusfc.springboot3java17.database.entity.UserEntity;
-import com.jesusfc.springboot3java17.model.httpRQRS.UserEntityListRS;
+
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.jesusfc.springboot3java17.openApi.v1.api.IUser;
+import com.jesusfc.springboot3java17.openApi.v1.model.UserList;
+import com.jesusfc.springboot3java17.openApi.v1.model.UserPageList;
 import com.jesusfc.springboot3java17.services.UserService;
-import io.swagger.v3.oas.annotations.Operation;
 import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.MessageSource;
-import org.springframework.context.i18n.LocaleContextHolder;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.servlet.LocaleResolver;
 
 import java.util.List;
-import java.util.Locale;
-import java.util.Optional;
+import java.util.UUID;
 
-/**
- * @author jesusfc
- * Created on mar 2023
- */
 @RestController
 @AllArgsConstructor
 @Slf4j
-@RequestMapping("/rest/user")
-public class UserRestController {
+@RequestMapping("/rest/")
+public class UserRestController implements IUser {
 
     private final UserService userService;
     private final LocaleResolver localeResolver;
 
     private final MessageSource messageSource;
-    @Operation(operationId = "logsTest")
-    @GetMapping("/logs-test")
-    public HttpStatus getLogsTest() {
+    private final ObjectMapper objectMapper;
+    private final HttpServletRequest request;
 
-        log.trace("some trace logging...");
-        log.debug("some debug logging...");
-        log.info("some info logging...");
-        log.warn("some warn logging...");
-        log.error("some error logging...");
 
-        return HttpStatus.OK;
+    @Override
+    public ResponseEntity<Void> createUser(IUser body) {
+        return null;
     }
 
-    @Operation(operationId = "userList")
-    @GetMapping("/list")
-    public ResponseEntity<UserEntityListRS> getUserList(Locale locale) {
-        String message = messageSource.getMessage("app.name", null, locale);
-        log.debug("message: " + message);
-        log.error("message: " + message);
-        List<UserEntity> userList = userService.getUserList();
-        return new ResponseEntity<>(UserEntityListRS.userEntityListRS(userList), HttpStatus.OK);
+    @Override
+    public ResponseEntity<Void> delUserById(UUID userId) {
+        return null;
     }
 
-    @GetMapping("/language-by-param")
-    public String hello(HttpServletRequest request, HttpServletResponse httpResponse,
-                        @RequestParam(value = "idioma", defaultValue = "es") String lang) {
-        localeResolver.setLocale(request, httpResponse, new Locale(lang));
-        return String.format("New Language: %s!", lang);
+    @Override
+    public ResponseEntity<IUser> getUserById(UUID userId) {
+        return null;
     }
 
-    @GetMapping("/language-by-interceptor")
-    public String hello(Locale locale) {
-        String message = messageSource.getMessage("app.name", null, locale);
-        return String.format("Cambiamos el idioma atravez del interceptor: " + message);
+    @Override
+    public ResponseEntity<List<UserList>> getUserList() {
+        return null;
     }
 
-    @GetMapping("/email/{email}")
-    public ResponseEntity<UserEntity> getUserById(@PathVariable(value = "email") String email) {
-        Locale locale = LocaleContextHolder.getLocale();
-        String message = messageSource.getMessage("app.name", null, locale);
-        System.out.println("Lang: " + locale.getLanguage() + ", Message: " + message);
-        Optional<UserEntity> byEmail = userService.getUserByEmail(email);
-        if (byEmail.isEmpty()) return new ResponseEntity<>(HttpStatus.NOT_FOUND);
-        return new ResponseEntity<>(byEmail.get(), HttpStatus.OK);
+    @Override
+    public ResponseEntity<List<UserPageList>> getUserPageList(Integer pageNumber, Integer pageSize) {
+        return null;
+    }
+
+    @Override
+    public ResponseEntity<Void> updateUserById(UUID userId, IUser body) {
+        return null;
     }
 }
